<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stAutoTunningDef" Id="{013b10e4-b636-4aa7-996d-67dbd2935632}">
    <Declaration><![CDATA[TYPE stAutoTunningDef :
STRUCT
	fTuneKp:LREAL;
	fTuneTn:LREAL;
	fTuneTv:LREAL;
	fTuneTd:LREAL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>